<resources>
    <string name="app_name">Charles Angels</string>

    // register fragment ids
    <string name="register_firstName">First Name</string>
    <string name="register_lastName">Last Name</string>
    <string name="register_nickname">Nickname</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_retypePassword">Retype Password</string>
    <string name="register_cancel">Cancel</string>
    <string name="register_register">Register</string>

    // home activity ids
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Charles Angels</string>
    <string name="nav_header_subtitle">TCSS 450 - Group 4</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_connections">Connections</string>
    <string name="menu_weather">Weather</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_logout">Logout</string>

    // verify fragment ids
    <string name="verify_textView">Verification Code</string>
    <string name="verify_button">Verify</string>
    <string name="verify_resend">Resend Code</string>
    <string name="verify_resendCode">Code successfully emailed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_chat_hint">Write a message</string>
    <string name="action_logout">Logout</string>

    <string name="edit_email">Email</string>
    <string name="edit_password">Password</string>
    <string name="register">REGISTER</string>
    <string name="sign_in">SIGN IN</string>

    <string name="edit_zip_code">zip code</string>
    <string name="button_get">get</string>
    <string name="button_save">save weather</string>
    <string name="button_getSaved">saved</string>
    <string name="lonLat">Lon/Lat</string>
    <string name="forecast24hour">24-Hour Forecast</string>
    <string name="forecast10day">10-Day Forecast</string>
    <string name="formatString">{0}{1}</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_create_chat">+</string>
    <string name="button_create_new_chat">Create</string>
    <string name="keys_json_timezone">timezone</string>
    <string name="edit_chat_name">Chat Name</string>
    <string name="chat_object">chat</string>
    <string name="display_no_chat">There is no chat right now, make one!</string>
    <string name="display_no_connection">You do not have any connection right now, please make one in Connections!</string>
</resources>
