<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_gold_24dp"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_chat_gold_24dp"
        android:title="@string/menu_chat" />

    <item
        android:id="@+id/nav_connectionGUI"
        android:icon="@drawable/ic_connections_gold_24dp"
        android:title="@string/menu_connections" />

    <item
        android:id="@+id/nav_weather"
        android:icon="@drawable/ic_weather_gold_24dp"
        android:title="@string/menu_weather" />


</menu>
