<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

<!--    <Button-->
<!--        android:id="@+id/weather_button3"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentEnd="true"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:layout_marginEnd="0dp"-->
<!--        android:layout_marginBottom="0dp"-->
<!--        android:text="@string/lonLat" />-->

    <TextView
        android:id="@+id/weather_cityCountry"
        style="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp" />

    <ImageView
        android:id="@+id/weather_conditionIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weather_cityCountry"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp" />

    <TextView
        android:id="@+id/weather_conditonDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weather_cityCountry"
        android:layout_alignLeft="@id/weather_conditionIcon"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/weather_conditionIcon" />

    <TextView
        android:id="@+id/weather_temperature"
        style="@style/tempStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weather_cityCountry"
        android:layout_alignBaseline="@id/weather_conditonDescription"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/weather_conditonDescription"
        android:layout_toRightOf="@id/weather_conditonDescription"
        android:textColor="@color/uwPurple" />

    <TextView
        android:id="@+id/pressLab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weather_conditonDescription"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="Pressure" />

    <TextView
        android:id="@+id/weather_pressure"
        style="@style/valData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/pressLab"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_toEndOf="@+id/pressLab"
        android:layout_toRightOf="@id/pressLab"
        android:textColor="@color/uwGold" />

    <TextView
        android:id="@+id/humLab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pressLab"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:text="Humidity" />

    <TextView
        android:id="@+id/weather_humidity"
        style="@style/valData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/humLab"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_toEndOf="@+id/humLab"
        android:layout_toRightOf="@id/humLab"
        android:textColor="@color/uwGold" />

    <TextView
        android:id="@+id/windLab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/humLab"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:text="Wind" />

    <TextView
        android:id="@+id/weather_windSpeed"
        style="@style/valData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/windLab"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="0dp"
        android:layout_toEndOf="@+id/windLab"
        android:layout_toRightOf="@id/windLab"
        android:textColor="@color/uwGold" />

    <TextView
        android:id="@+id/weather_windDegree"
        style="@style/valData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/windLab"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="0dp"
        android:layout_toEndOf="@+id/weather_windSpeed"
        android:layout_toRightOf="@id/weather_windSpeed"
        android:textColor="@color/uwGold" />

    <Button
        android:id="@+id/weather_zipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:text="@string/button_get" />

    <EditText
        android:id="@+id/weather_zipEditText"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/weather_zipButton"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="0dp"
        android:layout_toStartOf="@+id/weather_savedButton"
        android:ems="10"
        android:hint="@string/edit_zip_code"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/weather_saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:text="@string/button_save" />

    <Button
        android:id="@+id/weather_savedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/weather_saveButton"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:text="@string/button_getSaved" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weather_cityCountry"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:text="C/F" />

    <!--    <EditText-->
<!--        android:id="@+id/editText2"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_above="@+id/weather_zipEditText"-->
<!--        android:layout_alignParentStart="true"-->
<!--        android:layout_alignParentEnd="true"-->
<!--        android:layout_marginStart="0dp"-->
<!--        android:layout_marginEnd="0dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:ems="10"-->
<!--        android:hint="@string/keys_json_lat"-->
<!--        android:inputType="textPersonName" />-->

<!--    <EditText-->
<!--        android:id="@+id/editText3"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_above="@+id/editText2"-->
<!--        android:layout_alignParentStart="true"-->
<!--        android:layout_alignParentEnd="true"-->
<!--        android:layout_marginStart="0dp"-->
<!--        android:layout_marginEnd="0dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:ems="10"-->
<!--        android:hint="@string/keys_json_lon"-->
<!--        android:inputType="textPersonName" />-->

</RelativeLayout>